# abap-adt-py

./: .gitignore  LICENSE  README.md  adt_client.py  http_request.py  main.py  pyproject.toml  response_parsing.py
api/: activate.py  content.py  create.py  delete.py  lock.py  login.py  prettyprint.py  search.py  unittest.py
src/abap_adt_py/: adt_client.py  compat_typing.py  http_request.py  response_parsing.py
src/abap_adt_py/api/: activate.py  content.py  create.py  delete.py  lock.py  login.py  objectstructure.py  prettyprint.py  search.py  syntax.py  unittest.py  xml_namespaces.py
tests/: main.py
